# GameOfLifes

./: .clang-format  .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  prometheus.yml
.claude/: settings.json
.claude/commands/: adr-new.md  commit.md  roadmap-done.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  release.yml  security-review.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b5a4ece5fcfc_initial_schema.py
backend/app/: config.py  deps.py  logging_config.py  main.py  metrics.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/bots/: router.py  schemas.py  service.py
backend/app/db/: engine.py  models.py
backend/app/engine/: process.py  protocol.py  service.py
backend/app/health/: router.py
backend/app/middleware/: rate_limit.py
backend/app/sims/: router.py
backend/app/snapshots/: router.py  service.py  storage.py
backend/app/stats/: router.py
backend/app/tournaments/: router.py
backend/app/ws/: router.py
backend/tests/: conftest.py  test_auth.py  test_auth_functional.py  test_bots.py  test_db.py  test_engine_bridge.py  test_engine_integration.py  test_health.py  test_rate_limit.py  test_smoke.py  test_snapshots.py  test_stats.py  test_ws.py
bytecode/: pyproject.toml
bytecode/compiler/: __init__.py  __main__.py  ast_nodes.py  codegen.py  emit.py  lexer.py  parser.py  sema.py
bytecode/examples/: food_seeker.gol  random_walker.gol
bytecode/spec/: format.md  language.md  opcodes.md  semantics.md
bytecode/tests/: test_cli.py  test_codegen.py  test_lexer.py  test_parser.py  test_smoke.py
docs/: deployment.md
docs/adr/: 001-four-brick-architecture.md  002-custom-bytecode.md  003-hybrid-ai-tiers.md  004-no-external-clients.md  005-game-rules-v1.md  006-world-generation.md  007-snapshot-schema.md  008-genome-format.md  009-multi-resource.md  010-bytecode-v1.md  011-language-v1.md  012-auth-libraries.md  013-blockly.md  014-engine-ipc.md  015-db-dual-support.md  016-ws-full-snapshots.md  017-tier2-ml-format.md  018-frontend-stack.md
docs/audit/: 01-securite.md  02-runtime-engine.md  03-backend.md  04-frontend.md  05-tests.md  README.md
docs/roadmap/: 01-repo-bootstrap.md  02-ci-pipeline.md  03-engine-skeleton.md  04-world-grid.md  05-rng-config.md  06-agents-tick-loop.md  07-snapshot-serialization.md  08-genome-traits.md  09-reproduction.md  10-ecosystem-depth.md  11-environmental-cycle.md  12-bytecode-spec.md  13-vm-engine.md  14-agent-vm-binding.md  15-language-spec.md  16-lexer-parser.md  17-codegen.md  18-compiler-cli.md  19-backend-skeleton.md  20-db-schema.md  21-user-auth.md  22-bot-submission-api.md  23-engine-bridge.md  24-websocket-stream.md  25-replay-api.md  26-frontend-skeleton.md  27-world-viewer.md  28-auth-ui.md  29-block-editor.md  30-submission-flow.md  31-stats-views.md  32-replay-viewer.md  33-ml-loader.md  34-ml-agents.md  35-observability.md  36-deployment.md  37-launch-hardening.md  38-tier3-live-learning.md  39-private-sims.md  40-social-tournaments.md  (+2 more)
engine/: CMakeLists.txt  Dockerfile
engine/config/: default.toml
engine/include/engine/: agent.hpp  agent_vm.hpp  brain.hpp  brain_bytecode.hpp  brain_learning.hpp  brain_ml.hpp  broadcast.hpp  bytecode.hpp  direction.hpp  genome.hpp  grid.hpp  ipc.hpp  lineage_log.hpp  memory_bank.hpp  ml_runtime.hpp  position.hpp  reserve.hpp  rng.hpp  simulation.hpp  snapshot.hpp  snapshot_json.hpp  stats.hpp  terrain.hpp  traits.hpp  version.hpp  vm.hpp  world.hpp  world_clock.hpp  world_config.hpp
engine/src/: agent_vm.cpp  brain_bytecode.cpp  brain_learning.cpp  brain_ml.cpp  broadcast.cpp  bytecode.cpp  direction.cpp  genome.cpp  ipc.cpp  lineage_log.cpp  main.cpp  ml_runtime.cpp  reserve.cpp  rng.cpp  simulation.cpp  snapshot_json.cpp  stats.cpp  terrain.cpp  traits.cpp  version.cpp  vm.cpp  world.cpp  world_clock.cpp  world_config_loader.cpp
engine/tests/: CMakeLists.txt  test_agent_vm.cpp  test_brain.cpp  test_broadcast.cpp  test_broadcast_extended.cpp  test_direction.cpp  test_ecosystem.cpp  test_genome.cpp  test_grid.cpp  test_lineage_log.cpp  test_ml_runtime.cpp  test_position.cpp  test_reproduction.cpp  test_reserve.cpp  test_rng.cpp  test_simulation.cpp  test_snapshot.cpp  test_stress.cpp  test_version.cpp  test_vm.cpp  test_world.cpp  test_world_clock.cpp  test_world_config.cpp
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  index.ts  smoke.test.ts
frontend/src/lib/blocks/: definitions.ts  generator.ts
frontend/src/lib/canvas/: WorldCanvas.svelte  decode.test.ts  decode.ts  playback.test.ts  renderer.ts  types.ts  validate.test.ts  validate.ts
frontend/src/lib/charts/: LineChart.svelte
frontend/src/lib/components/: AgentInspector.svelte
frontend/src/lib/stores/: auth.test.ts  auth.ts
frontend/src/lib/types/: api.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/docs/: +page.svelte
frontend/src/routes/edit/: +page.svelte  +page.ts
frontend/src/routes/genealogy/[bot_id]/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/me/bots/: +page.svelte
frontend/src/routes/me/bots/[id]/: +page.svelte
frontend/src/routes/replay/: +page.svelte
frontend/src/routes/sandbox/: +page.svelte
frontend/src/routes/signup/: +page.svelte
frontend/src/routes/stats/: +page.svelte
frontend/src/routes/tos/: +page.svelte
frontend/src/routes/tournaments/: +page.svelte
frontend/src/routes/world/: +page.svelte
scripts/: backup.sh
