[project]
name = "gameoflifes-backend"
version = "0.1.0"
description = "GameOfLifes FastAPI backend."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic-settings>=2.7,<2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28,<0.29",
    "pyright>=1.1.380",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["app", "tests"]
strict = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
