[project]
name = "gameoflifes-backend"
version = "1.0.0"
description = "GameOfLifes FastAPI backend."
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic-settings>=2.7,<2.8",
    "sqlmodel>=0.0.22,<0.1",
    "alembic>=1.14,<1.15",
    "aiosqlite>=0.20,<0.21",
    "pyjwt>=2.9,<2.10",
    "argon2-cffi>=23.1,<24.0",
    "gameoflifes-bytecode",
    "zstandard>=0.23,<0.24",
    "structlog>=24.4,<25.0",
    "prometheus-client>=0.21,<0.22",
    "slowapi>=0.1.9,<0.2",
]

[project.urls]
Homepage = "https://github.com/Lupshan/GameOfLifes"
Repository = "https://github.com/Lupshan/GameOfLifes"

[tool.uv.sources]
gameoflifes-bytecode = { path = "../bytecode" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28,<0.29",
    "pyright>=1.1.380",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]  # Depends() in defaults is standard FastAPI pattern

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["app", "tests"]
reportMissingTypeStubs = false
reportArgumentType = false  # SQLAlchemy .where() overloads confuse pyright
reportAssignmentType = false  # SQLModel __tablename__ typing issue
reportCallIssue = false  # SQLAlchemy select() overloads
reportAttributeAccessIssue = false  # SQLAlchemy expression .label() typing

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
