[project]
name = "gameoflifes-bytecode"
version = "0.1.0"
description = "GameOfLifes in-house scripting language and bytecode compiler."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1.380",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["compiler", "spec", "tests", "app"]
strict = ["compiler"]
