[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["compiler"]

[project]
name = "gameoflifes-bytecode"
version = "1.0.0"
description = "GameOfLifes in-house scripting language and bytecode compiler."
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = []

[project.urls]
Homepage = "https://github.com/Lupshan/GameOfLifes"
Repository = "https://github.com/Lupshan/GameOfLifes"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1.380",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["compiler", "spec", "tests", "app"]
strict = ["compiler"]
